[tool.poetry]
name = "pycargr"
version = "0.1.0"
description = ""
authors = ["Dimitris Strantsalis"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
bs4 = "^0.0.1"
requests = "^2.28.0"
fake-useragent = "^0.1.11"

[tool.poetry.dev-dependencies]
pylama = "^8.3.8"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
